// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell-taro prop 1`] = `
"[36m<body>[39m
  [36m<div />[39m
  [36m<div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"nut-cell"[39m
      [33mstyle[39m=[32m"border-radius: 6px; align-items: flex-start;"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cell-left"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-cell-title"[39m
        [36m>[39m
          [0mURL 跳转[0m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cell-extra"[39m
      [36m>[39m
        [0mhttps://m.jd.com/[0m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</body>[39m"
`;

exports[`cell-taro prop 2`] = `
"[36m<body>[39m
  [36m<div />[39m
  [36m<div />[39m
  [36m<div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"nut-cell"[39m
      [33mstyle[39m=[32m"border-radius: 6px; align-items: flex-start;"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cell-left"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-cell-title"[39m
        [36m>[39m
          [0mURL 跳转[0m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cell-extra"[39m
      [36m>[39m
        [0mhttps://m.jd.com/[0m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</body>[39m"
`;

exports[`cell-taro prop title extra description test 1`] = `
"[36m<body>[39m
  [36m<div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"nut-cell"[39m
      [33mstyle[39m=[32m"border-radius: 6px; align-items: flex-start;"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cell-left"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-cell-title"[39m
        [36m>[39m
          [0m我是标题[0m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-cell-description"[39m
        [36m>[39m
          [0m我是描述[0m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cell-extra"[39m
      [36m>[39m
        [0m描述文字[0m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</body>[39m"
`;
